syntax="proto2";
package example;

message EchoRequest
{
	optional string message = 1;
	optional string name = 2;
	//repeated int32 arr = 3;
};

message EchoResponse
{
	optional string message = 1;
	optional int32 state = 2;
	optional int32 error = 3;
	//repeated int32 arr = 4;
};

service ExamplePB
{
	rpc Echo(EchoRequest) returns (EchoResponse);
};

